change doc structure

--- a/docs/source/mbi/data_model/l1.rst
+++ b/docs/source/mbi/data_model/l1.rst
@@ -1,16 +1,16 @@
-MBI L1 Data Model
------------------
+L1 Data Model
+-------------
 
 Notes
 ^^^^^
 
-    每一个模块的结果单独开一个section，以COMMENT分隔（参考0级数据）
-    精简、丰富、修改每个关键字定义的comment
-    `---`表示在模块算法失败的情况下按照实际情况填写，比如无论模块是否成功，时间戳都应该填写实际值
-    keyword开头是“-”号的，根据理解和最终的产品无关，建议去掉
-    keyword开头是“*”号的，表示有所修改，请检查是否需要，完善注释，并检查对fill value的设置是否合理
-    flux模块中的天光背景测量已经移动到instrumens，请把该数值利用zp转换为SKY_MAG（单位mag/arcsed^2）
-    版本，完成时间，状态三个参数的name进行了统一，分别以VER_，STM_，STA_开头
+    * 每一个模块的结果单独开一个section，以COMMENT分隔（参考0级数据）
+    * 精简、丰富、修改每个关键字定义的comment
+    * ---表示在模块算法失败的情况下按照实际情况填写，比如无论模块是否成功，时间戳都应该填写实际值
+    * keyword开头是“-”号的，根据理解和最终的产品无关，建议去掉
+    * keyword开头是“*”号的，表示有所修改，请检查是否需要，完善注释，并检查对fill value的设置是否合理
+    * flux模块中的天光背景测量已经移动到instrumens，请把该数值利用zp转换为SKY_MAG（单位mag/arcsed^2）
+    * 版本，完成时间，状态三个参数的name进行了统一，分别以VER，STM，STA开头
 
 Data model
 ^^^^^^^^^^
@@ -36,8 +36,9 @@ Data model
 
 HDU0
 ^^^^
+
 +---------+-------+---------------+------------+------+-----------+
-| keyword | value | comment       | fill value | type | module    |
+| key     | value | comment       | fill value | type | module    |
 +=========+=======+===============+============+======+===========+
 | SIMPLE  | True  | Fits standard | True       | bool | csst_sims |
 +---------+-------+---------------+------------+------+-----------+
@@ -47,7 +48,7 @@ HDU1
 ^^^^
 
 +----------+--------------------------+-------------------------------------------------+----------------------+-------+---------------+
-| keyword  | value                    | comment                                         | fill value           | type  | last modified |
+| key      | value                    | comment                                         | fill value           | type  | last modified |
 +==========+==========================+=================================================+======================+=======+===============+
 | VER_INST | '0.0.1   '               | Version of instrument processing                | '0.0.1   '           | str   | C7            |
 +----------+--------------------------+-------------------------------------------------+----------------------+-------+---------------+
@@ -63,7 +64,7 @@ HDU1
 +----------+--------------------------+-------------------------------------------------+----------------------+-------+---------------+
 | SKY_BKG  | 0.1                      | Estimated sky background (e-/s per pixel)       | -9999                | float | C7            |
 +----------+--------------------------+-------------------------------------------------+----------------------+-------+---------------+
-| SKY_RMS  | 10.0                     | *Standard dev of frame background (ADU) -> e-/s | -9999                | float | C7            |
+| SKY_RMS  | 10.0                     | Standard dev of frame background (ADU) -> e-/s  | -9999                | float | C7            |
 +----------+--------------------------+-------------------------------------------------+----------------------+-------+---------------+
 | SATURATE | 1833.333333333333        | The flux limit of saturated pixel (e-/s)        | -9999                | float | C7            |
 +----------+--------------------------+-------------------------------------------------+----------------------+-------+---------------+
