--- a/docs/source/mbi/data_model/l2.rst
+++ b/docs/source/mbi/data_model/l2.rst
@@ -1,5 +1,5 @@
-MBI L2 Data Model
------------------
+L2 Data Model
+-------------
 
 cat.fits
 ^^^^^^^^
@@ -90,9 +90,7 @@ cat.fits
 
 #### Header
 
-## File: *_psf.fits
-
-### File contents
+## File: psf.fits
 
 +------+-------+------------+
 | HDU  | data  | note       |
@@ -104,8 +102,6 @@ cat.fits
 
 
 ### HDU0
-
-#### Header
 
 +---------+-------+---------------+------------+------+------------------+
 | keyword | value | comment       | fill value | type | module           |
@@ -190,15 +186,15 @@ cat.fits
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
 | P1_FOCUS  | 28025.63452           | parameter 1 of focal length calculated from the positions ofthe focus <br> adjustment mechanism (FAM) and the secondary mirror (in mm) |            | f32  | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
-| P2_ FOCUS | 28025.63452           | parameter 2 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
+| P2_FOCUS  | 28025.63452           | parameter 2 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
-| P3_ FOCUS | 28025.63452           | parameter 3 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
+| P3_FOCUS  | 28025.63452           | parameter 3 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
-| P4_ FOCUS | 28025.63452           | parameter 4 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
+| P4_FOCUS  | 28025.63452           | parameter 4 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
-| P5_ FOCUS | 28025.63452           | parameter 5 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
+| P5_FOCUS  | 28025.63452           | parameter 5 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
-| P6_ FOCUS | 28025.63452           | parameter 6 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
+| P6_FOCUS  | 28025.63452           | parameter 6 of focal length (in mm)                                                                                                    |            | f32  | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
 | FSM_STAT  | T                     | working state of fast-steering mirror (FSM)                                                                                            |            | bool | csst_ooc_psf_strategy_crds |
 +-----------+-----------------------+----------------------------------------------------------------------------------------------------------------------------------------+------------+------+----------------------------+
