change doc structure

--- a/docs/source/sls/data_model/l1.rst
+++ b/docs/source/sls/data_model/l1.rst
@@ -1,5 +1,5 @@
-Data Model
-^^^^^^^^^^
+L1 Data Model
+^^^^^^^^^^^^^
 
 * **General Description**
   * SLS L1 file contains image data.
@@ -26,7 +26,7 @@ Data Model
 +------+-----------------------+------------+
 
 HDU1
-^^^^
+""""
 
 +----------+-----------------------+----------------------------------------------+------------+-------+---------------+
 | keyword  | value                 | comment                                      | fill value | type  | last modified |
@@ -179,7 +179,7 @@ HDU1
 +----------+-----------------------+----------------------------------------------+------------+-------+---------------+
 
 HDU2
-^^^^
+""""
 
 +----------+---------+----------------------------+------------+------+---------------+--+
 | keyword  | value   | comment                    | fill value | type | last modified |  |
@@ -206,7 +206,7 @@ HDU2
 +----------+---------+----------------------------+------------+------+---------------+--+
 
 HDU3
-^^^^
+""""
 
 +----------+------------+----------------------------+------------+------+---------------+--+
 | keyword  | value      | comment                    | fill value | type | last modified |  |
